[gd_scene load_steps=24 format=2]

[ext_resource path="res://freeSprites/5 Boy/Boy_attack.png" type="Texture" id=1]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://detectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://WanderCtr.tscn" type="PackedScene" id=8]
[ext_resource path="res://WhiteColorShader.tres" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.66667
height = 13.3333

[sub_resource type="CircleShape2D" id=8]
radius = 93.3928

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.33333
height = 13.3333

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.33333
height = 6.66667

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
frames = SubResource( 5 )
animation = "attack"
playing = true
offset = Vector2( 12, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8 )
rotation = 1.57079
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="Area2D" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="Area2D" index="0"]
modulate = Color( 0.647059, 0.12549, 0, 0.494118 )
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 9 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="WanderCtr" parent="." instance=ExtResource( 8 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="Area2D"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
